k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minilinks-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: minilinks-api
  template:
    metadata:
      labels:
        app: minilinks-api
    spec:
      containers:
        - name: api
          image: therealayinla/minilink-api:5020947071dd294aa945318212e870bb1b63d012
          ports:
            - containerPort: 3000
