k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minilinks-api
spec:
  selector:
    app: minilinks-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
