k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minilinks-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chopam.name.ng
      secretName: chopam-tls
  rules:
    - host: chopam.name.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minilinks-api
                port:
                  number: 80
